adds users to openAPI and creates pydantic schemas
